// Copyright 2024 Nitro Agility S.r.l.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//
// SPDX-License-Identifier: Apache-2.0

syntax="proto3";

import "google/protobuf/struct.proto";

package com.permguard.pep;

option java_package = "com.permguard.pep.proto";
option java_outer_classname = "AuthorizationCheck";

// PolicyStore is the location where policies are maintained.
message PolicyStore {
	string Type = 1;
	string ID = 2;
}

// Principal represents the entity making the request.
message Principal {
	string Type = 1;
	string ID = 2;
	optional string Source = 3;
	optional string IdentityToken = 4;
	optional string AccessToken = 5;
}

// Entities represent the entities provided in the context for the authorization decision.
message Entities {
	string Schema = 1;
	repeated google.protobuf.Struct Items = 2;
}

// Subject is the entity on which the authorization decision is made.
message Subject {
	string Type = 1;
	string ID = 2;
	optional string Source = 3;
	optional google.protobuf.Struct Properties = 4;
}

// Resource is the entity on which the authorization decision is made.
message Resource {
	string Type = 1;
	string ID = 2;
	optional google.protobuf.Struct Properties = 3;
}

// Action is the operation on which the authorization decision is made.
message Action {
	string Name = 1;
	optional google.protobuf.Struct Properties = 2;
}

// AuthorizationCheck Request

// AuthorizationContextRequest is the input context for making the authorization decision.
message AuthorizationContextRequest {
	int64 ApplicationID = 1;
	PolicyStore PolicyStore = 2;
	optional Principal Principal = 3;
	optional Entities Entities = 4;
}

// EvaluationRequest represents the request to evaluate the authorization decision.
message EvaluationRequest {
	optional Subject Subject = 1;
	optional Resource Resource = 2;
	optional Action Action = 3;
	optional google.protobuf.Struct Context = 4;
}

// AuthorizationCheckRequest represents the request to perform an authorization decision.
message AuthorizationCheckRequest {
	AuthorizationContextRequest AuthorizationContext = 2;
	optional Subject Subject = 3;
	optional Resource Resource = 4;
	optional Action Action = 5;
	optional google.protobuf.Struct Context = 6;
	repeated EvaluationRequest Evaluations = 7;
}

// AuthorizationCheck Response

 // ReasonResponse provides the rationale for the response.
message ReasonResponse {
	string Code = 1;
	string Message = 2;
}

// ContextResponse represents the context included in the response.
message ContextResponse {
	string ID = 1;
	ReasonResponse ReasonAdmin = 2;
	ReasonResponse ReasonUser = 3;
}

// EvaluationResponse represents the result of the evaluation process.
message EvaluationResponse {
	bool Decision = 1;
	optional ContextResponse Context = 2;
}

// AuthorizationCheckResponse represents the outcome of the authorization decision.
message AuthorizationCheckResponse {
	bool Decision = 1;
	optional ContextResponse Context = 2;
	repeated EvaluationResponse Evaluations = 3;
}

// V1PDPService	is the service for the Policy Decision Point.
service V1PDPService {
	rpc AuthorizationCheck(AuthorizationCheckRequest) returns (AuthorizationCheckResponse) {}
}
